# omni_robot

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  gz_bridge.yaml  nav2_params.yaml
config/moveit/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  my_omni_robot.srdf  ompl_planning.yaml
launch/: display.launch.py  gazebo.launch.py  moveit.launch.py  navigation.launch.py  sim_moveit.launch.py  sim_nav2.launch.py
map/: map.pgm  map.yaml
meshes/: base_link.dae  base_link.stl  camera.stl  omni_frame.stl  roller.stl
rviz/: config.rviz  moveit_config.rviz  nav2_config.rviz
src/: kinematics.cpp
urdf/: arm.urdf.xacro  base_link.urdf.xacro  camera.urdf.xacro  gazebo_plugins.urdf.xacro  gripper.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro  omni_wheel.urdf.xacro  robot.urdf.xacro  roller.urdf.xacro  ros2_control.urdf.xacro
worlds/: empty.sdf  warehouse.sdf
