<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_omni_robot</name>
  <version>3.0.0</version>
  <description>4-wheel omni robot with 6-DOF arm and MoveIt2</description>
  <maintainer email="agaifullin157@gmail.com">Azamat G.</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>

  <depend>ros_gz</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>ign_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>velocity_controllers</depend>
  <depend>position_controllers</depend>
  <depend>joint_trajectory_controller</depend>

  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>

  <depend>moveit</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_configs_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
